--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/title_activity_modules"
+            android:label="Topics"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.SignUp"
